# rust-template

./: Cargo.toml  README.md
src/: main.rs
