[package]
name = "rust-template"
version = "0.1.0"
authors = ["Firstname Lastname <my@email.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
strip = true  # Automatically strip symbols from the binary.
